# worst

./: .gitignore  CHANGELOG  Cargo.toml  LICENSE  Makefile  README.md  dub.sdl  dune-project  egg.w  literate.css  lworsti  lworsti.sh  oldworst  package.json  project.janet  shell.nix  test.csd  wcs  wluai  worst  worst.rkt  worstc  worsti
.cargo/: config.toml
app/: hell.rs  mworst.rs  reader.rs
base/: init.w
bundle/: LICENSE  Makefile  bundle.lua  bundle_entrypoint.lua  minizip.lua
examples/: snake.w
extra/doc/: check.w
lib/: ansi-term.w  base.w  cil.w  dict.w  doc.w  list.w  lworsti.w  mw.w  rworst.w  ui.w  worst-repl.w
lib/base/: attribute.w  bootstrap.w  case.w  cond.w  define.w  dispatch.w  env.w  eval.w  fs.w  list.w  load-file.w  module.w  ops.w  port.w  prelude.w  process.w  quasiquote.w  records.w  stdio.w  string.w
lib/cil/: base.lua  base.w.lua  bootstrap.w  eval.lua  expr.lua  lua-import.w  lua.w  lua.w.lua  luagen.w
lib/cil/bootstrap/: base.w  builtins.w  data.w  emit.w  eval.w  init.w  lua-import.w
lib/cil/lua/: base.lua  base.w.lua  (+14 more)
lib/cli/: ansi.w  help.w  repl.w
lib/compile/: evaluate.lua  lua.lua  lua.w.lua
lib/data/: dict.w  list.w  map.w  pairs.w  string.w
lib/doc/: builtins.w  check.w  doc.w
lib/help/: base.w  stdlib.w
lib/lua/: base.w  compiler-old.w  compiler.w  jit.w  lworst.lua  pico-8.w  rt.w  text.w  write.w
lib/lworst/: base.lua  builtins.lua  interpreter.lua  list.lua  lworsti.lua  main.lua  map.lua  port.lua  reader.lua
lib/meta/: cil.w
lib/mw/: base.w  builtins.mw
lib/syntax/: assign.w  attribute.w  attributes.w  case.w  catch.w  cond.w  extra.w  function.w  object.w  rules.w  variable.w
lib/term/: ansi.w  readline.w  stty.w
lib/types/: base.w
lib/ui/: ansi.w  cli.w  help.w  repl.w
lib/worst/: base.w  define.w  define.w.lua  doc.w  init.w  interpreter.w  misc.w  module.w  multi.w  package.w  prelude.w  reader.w  repl.w
oldlib/: worst-repl.w
oldlib/base/: cond.w  control.w  define.w  eval.w  interpreter.w  list.w  number.w  records.w  syntax.w
oldlib/syntax/: base.w
oldlib/term/: ansi.w  readline.w
source/: app.d  base.d  interpreter.d  list.d  port.d  reader.d
source/builtin/: core.d
src/: Builtin.ml  Interpreter.ml  Reader.ml  Ty.ml  Type_base.ml  Val_base.ml  Worst_base.ml  base.rs  builtins.rs  combo.rs  data.rs  dune  interp2.rs  interpreter.rs  lib.rs  list.rs  main.rs  main.w  mod.rs  parser_basic.rs  reader.rs  stdlib.rs  wasm.rs
src/base/: io.rs  list.rs  meta.rs  symbol.rs  traits.rs  types.rs  unique.rs  vals.rs  value.rs
src/builtins/: Builtin_core.ml  Builtin_definition.ml  Builtin_list.ml  Builtin_reader.ml  Builtin_stdio.ml  Builtin_string.ml  Builtin_system.ml  Core.ml  Stdio.ml  Value.ml  builtins.ml  bytevector.rs  core.rs  defenv.rs  define.rs  defset.rs  doc.rs  dynamic.rs  file.rs  fs.rs  i64map.rs  i64table.rs  interpreter.rs  io.rs  list.rs  mod.rs  module.rs  numeric.rs  os.rs  place.rs  port.rs  process.rs  reader.rs  stdio.rs  string.rs  unique.rs  util.rs  zip.rs
src/data/: datum.rs  error.rs  i64table.rs  list.rs  mod.rs  number.rs  prim.rs  symbol.rs  types.rs
src/exe/: dune  main.ml  worst.ml
src/interpreter/: async_gen.rs  base.rs  builtin.rs  code.rs  command.rs  context.rs  definition.rs  defset.rs  env.rs  exec.rs  handle.rs  mod.rs  stack.rs
src/parser/: data.rs  error.rs  mod.rs  reader.rs  token.rs
src/parser_ext/: data.rs  reader.rs
src/stdlib/: bool.rs  combo.rs  control.rs  datum.rs  enumcommand.rs  env.rs  list.rs  mod.rs  net.rs  number.rs  parser.rs  place.rs  process.rs  stack.rs  string.rs
src/wasm/: conv.rs  handle.rs
test/: assert_t.w  assert_t.w.lua  flameit  interpreter_t.lua  list_t.lua  main.lua  port_t.lua  reader_t.lua  reader_t.w  test.lua  test.sh  worst_t.w
web/: Makefile  package-lock.json  package.json  wasmtest.html  wasmtest.js
worst/: builtins.janet  data.janet  init.janet  interpreter.janet  main.w  reader.janet
worst/builtins/: bytevector.janet  core.janet  def.janet  fs.janet  interpreter.janet  list.janet  lookup.janet  numeric.janet  place.janet  port.janet  reader.janet  string.janet  sys.janet  type.janet  util.janet  value.janet
worst/preload/: ansi.w  attribute.w  dispatch.w  init.w  list.w  ops.w  repl.w
(+114 files in other folders)
