[package]
name = "worst"
version = "0.1.0"
description = "An interpreter for the Worst programming language"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
[dependencies]
genawaiter = "^0.99"
# nightly feature to watch embedded fs
include_dir = { version = "^0.7", optional = true } #, features = ["nightly"] }

[features]
# Toggle-able builtins modules
# Access to stdin, stdout, stderr using current-{input,output,error}-port
enable_stdio = []
# Access to filesystem
enable_fs = ["builtin_file_module"]

# include builtins::file module at all (simplifies #[cfg] usage)
builtin_file_module = []

all_builtins = ["enable_stdio", "enable_fs"]

bundled_fs_embed = ["dep:include_dir", "builtin_file_module"]
# (TODO) Embed lib files in program as `cat worst lib.zip > worst`
bundled_fs_zip = []

wasm = ["bundled_fs_embed"]
full = ["bundled_fs_embed", "bundled_fs_zip", "all_builtins"]
default = ["full"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "^0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "^0.1"

